<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"/>

    <ListPreference
        android:defaultValue="@string/pref_temp_unit_default"
        android:dialogTitle="@string/pref_temp_unit_dialog_title"
        android:entries="@array/pref_temp_unit_entries"
        android:entryValues="@array/pref_temp_unit_values"
        android:key="@string/pref_temp_unit_key"
        android:title="@string/pref_temp_unit_label"
        />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>
